--- a/Parsed.html
+++ b/Parsed.html
@@ -1,140 +1,1 @@
-<div class="col-md-11 srtr_div"><br/>
-=====[ NOTES ]==================================================================<br/>
-<br/>
-user name changed to 'xxxx'<br/>
-user site changed to 'yyyy'<br/>
-<br/>
-used https://www.iplocation.net/trace-email<br/>
-or<br/>
-https://whatismyip.live/ip-lookup<br/>
-to trace origination<br/>
-<br/>
-used https://bitcoinwhoswho.com/scams to report it. NOTE: the address message<br/>
-was sent from is probably a VPN - this could be used with the email header to<br/>
-pinpoint an actual origination address by coordinating VPN source and endpoints<br/>
-with times of transmission of the messages.<br/>
-<br/>
-<br/>
-=====[ REPORT ]=================================================================<br/>
-<br/>
-Type: Extortion Attempt<br/>
-Date: 20220727<br/>
-Bitcoin Account: 16bHkVFULVmxTGVi2XKpwzkt5KrRnThzPg<br/>
-Email Source IP: 197.92.144.176<br/>
-<br/>
------[ IP Location Info ]-------------------------------------------------------<br/>
-<br/>
-IP Address: 197.92.144.176<br/>
-Reverse DNS: 197-92-144-176.hff.mweb.co.za<br/>
-City: Cape town<br/>
-Region: Western cape<br/>
-Country: South africa (ZA)<br/>
-Organization/ISP: OPTINET<br/>
-Latitude/Longitude: -34.0486, 18.4811<br/>
-<br/>
------[ Email Header ]-----------------------------------------------------------<br/>
-<br/>
-Return-Path: <br/>
-Delivered-To: <a class="__cf_email__" data-cfemail="433b3b3b3b033a3a3a3a6d202c2e" href="/cdn-cgi/l/email-protection">[email protected]</a><br/>
-Received: (qmail 15326 invoked from network); 27 Jul 2022 07:53:25 -0000<br/>
-Received: from unknown (HELO xsmtp21.mail2web.com) ([10.100.68.60])<br/>
-(envelope-sender )<br/>
-by xmail11.myhosting.com (qmail-ldap-1.03) with AES256-SHA encrypted SMTP<br/>
-for ; 27 Jul 2022 07:53:17 -0000<br/>
-Received: from [197.92.144.176] (helo=197-92-144-176.hff.mweb.co.za)<br/>
-by xsmtp21.mail2web.com with esmtp (Exim 4.92)<br/>
-(envelope-from )<br/>
-id 1oGbr1-0004zE-Vi<br/>
-for <a class="__cf_email__" data-cfemail="730b0b0b0b330a0a0a0a5d101c1e" href="/cdn-cgi/l/email-protection">[email protected]</a>; Wed, 27 Jul 2022 00:53:16 -0700<br/>
-Message-ID: <br/>
-From: <br/>
-To: <br/>
-Subject: [spam][Bitdefender malware detection] Don't miss your<br/>
-unsettled payment. Complete your debt payment now.<br/>
-Date: 27 Jul 2022 10:48:14 +0100<br/>
-MIME-Version: 1.0<br/>
-Content-Type: text/plain; charset="iso-8859-1"<br/>
-Content-Transfer-Encoding: 7bit<br/>
-X-Mailer: Umsvjvo xkyxrwo 7.6<br/>
-X-Host-Lookup-Failed: Reverse DNS lookup failed for 197.92.144.176 (failed)<br/>
-X-SA-Exim-Connect-IP: 197.92.144.176<br/>
-X-SA-Exim-Mail-From: <a class="__cf_email__" data-cfemail="88e1e7f8eee4e6e1e1c8efe9e5edebe7ebe3ece9e1e4f1a6ebe7e5" href="/cdn-cgi/l/email-protection">[email protected]</a><br/>
-X-SA-Exim-Scanned: No (on xsmtp21.mail2web.com); SAEximRunCond expanded to false<br/>
-X-BitdefenderWKS-SpamStamp: Build: [Engines: 2.16.3.1423, Stamp: 3],<br/>
-Multi: [Enabled, t: (0.000005,0.010163)], BW: [Enabled, t:<br/>
-(0.000010)], RTDA: [Enabled, t: (0.062402), Hit: Yes, Details:<br/>
-v2.41.0; Id: 12.5203bh.1g909ifds.359k; mclb; categories:<br/>
-extortion(btc,fipr,fuzzy),malware(sign);<br/>
-fipr(1079322bf4ab72ea1fa9dac64f1a632bb233:919;);<br/>
-fz(10365ff5e33d0a989e211f2ef63dcaf8264b:929;);<br/>
-ai(1_0_6-ff7e0c72a452f2da7a0df8ecfad0b00a-rtdaai.v335.3031828839-model:999;);<br/>
-sign(5ad54f4d8100203320f8d6e42860363a:991;);<br/>
-btc(1a62e158da58cf34bd0159674adafec3:899;)], total: 999(775)<br/>
-X-BitdefenderWKS-Spam: Yes - 999<br/>
-X-BitdefenderWKS-Categories: malware, extortion<br/>
-<br/>
-<br/>
------[ Message Text ]-----------------------------------------------------------<br/>
-<br/>
-Hi there!<br/>
-<br/>
-I regret to inform you about some sad news for you.<br/>
-Approximately a month or two ago I have succeeded to gain a total access to all your devices utilized for browsing internet.<br/>
-Moving forward, I have started observing your internet activities on continuous basis.<br/>
-<br/>
-Go ahead and take a look at the sequence of events provided below for your reference:<br/>
-Initially I bought an exclusive access from hackers to a long list of email accounts (in today's world, that is really a common thing, which can arranged via internet).<br/>
-Evidently, it wasn't hard for me to proceed with logging in your email account (<a class="__cf_email__" data-cfemail="275f5f5f5f675e5e5e5e0944484a" href="/cdn-cgi/l/email-protection">[email protected]</a>).<br/>
-<br/>
-Within the same week, I moved on with installing a Trojan virus in Operating Systems for all devices that you use to login to email.<br/>
-Frankly speaking, it wasn't a challenging task for me at all (since you were kind enough to click some of the links in your inbox emails before).<br/>
-Yeah, geniuses are among us.<br/>
-<br/>
-Because of this Trojan I am able to gain access to entire set of controllers in devices (e.g., your video camera, keyboard, microphone and others).<br/>
-As result, I effortlessly downloaded all data, as well as photos, web browsing history and other types of data to my servers.<br/>
-Moreover, I have access to all social networks accounts that you regularly use, including emails, including chat history, messengers, contacts list etc.<br/>
-My unique virus is incessantly refreshing its signatures (due to control by a driver), and hence remains undetected by any type of antiviruses.<br/>
-<br/>
-Hence, I guess by now you can already see the reason why I always remained undetected until this very letter...<br/>
-<br/>
-During the process of compilation of all the materials associated with you, I also noticed that you are a huge supporter and regular user of websites hosting nasty adult content.<br/>
-Turns out to be, you really love visiting porn websites, as well as watching exciting videos and enduring unforgettable pleasures.<br/>
-As a matter of fact, I was not able to withstand the temptation, but to record certain nasty solo action with you in main role, and later produced a few videos exposing your masturbation and cumming scenes.<br/>
-<br/>
-If until now you don't believe me, all I need is one-two mouse clicks to make all those videos with everyone you know, including your friends, colleagues, relatives and others.<br/>
-Moreover, I am able to upload all that video content online for everyone to see.<br/>
-I sincerely think, you certainly would not wish such incidents to take place, in view of the lustful things demonstrated in your commonly watched videos, (you absolutely know what I mean by that) it will cause a huge adversity for you.<br/>
-<br/>
-There is still a solution to this matter, and here is what you need to do:<br/>
-You make a transaction of $1340 USD to my account (an equivalent in bitcoins, which recorded depending on the exchange rate at the date of funds transfer), hence upon receiving the transfer, I will immediately get rid of all those lustful videos without delay.<br/>
-After that we can make it look like there was nothing happening beforehand.<br/>
-Additionally, I can confirm that all the Trojan software is going to be disabled and erased from all devices that you use. You have nothing to worry about, because I keep my word at all times.<br/>
-<br/>
-That is indeed a beneficial bargain that comes with a relatively reduced price, taking into consideration that your profile and traffic were under close monitoring during a long time frame.<br/>
-If you are still unclear regarding how to buy and perform transactions with bitcoins - everything is available online.<br/>
-<br/>
-Below is my bitcoin wallet for your further reference: 16bHkVFULVmxTGVi2XKpwzkt5KrRnThzPg<br/>
-<br/>
-All you have is 48 hours and the countdown begins once this email is opened (in other words 2 days).<br/>
-<br/>
-The following list includes things you should remember and avoid doing:<br/>
-&gt; There's no point to try replying my email (since this email and return address were created inside your inbox).<br/>
-&gt; There's no point in calling police or any other types of security services either. Furthermore, don't you dare sharing this info with any of your friends.<br/>
-If I discover that (taking into consideration my skills, it will be really simple, because I control all your systems and continuously monitor them) - your nasty clip will be shared with public straight away.<br/>
-&gt; There's no point in looking for me too - it won't result in any success. Transactions with cryptocurrency are completely anonymous and untraceable.<br/>
-&gt; There's no point in reinstalling your OS on devices or trying to throw<br/>
-&gt; them away. That won't solve the issue,<br/>
-since all clips with you as main character are already uploaded on remote servers.<br/>
-<br/>
-Things that may be concerning you:<br/>
-&gt; That funds transfer won't be delivered to me.<br/>
-Breathe out, I can track down everything right away, so once funds transfer is finished, I will know for sure, since I interminably track down all activities done by you (my Trojan virus controls all processes remotely, just as TeamViewer).<br/>
-&gt; That your videos will be distributed, even though you have completed money transfer to my wallet.<br/>
-Trust me, it is worthless for me to still bother you after money transfer is successful. Moreover, if that was ever part of my plan, I would do make it happen way earlier!<br/>
-<br/>
-We are going to approach and deal with it in a clear manner!<br/>
-<br/>
-In conclusion, I'd like to recommend one more thing... after this you need to make certain you don't get involved in similar kind of unpleasant events anymore!<br/>
-My recommendation - ensure all your passwords are replaced with new ones on a regular basis.<br/>
-<br/>
-</div>
+<object object at 0x11d2d1a40>
